<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lbl_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/marge_grande"
        android:text="@string/lbl_nom"
        android:textColor="@color/noir"
        android:textSize="@dimen/tailleTexte_moyenne" />

    <EditText
        android:id="@+id/txt_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_prenom"
        android:layout_below="@+id/lbl_nom"
        android:layout_margin="@dimen/marge_petite"
        android:ems="10"
        android:hint="@string/txt_nom_infos"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="@dimen/tailleTexte_petite" />

    <TextView
        android:id="@+id/lbl_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_nom"
        android:layout_margin="@dimen/marge_grande"
        android:layout_marginTop="18dp"
        android:text="@string/lbl_prenom"
        android:textSize="@dimen/tailleTexte_moyenne" />

    <EditText
        android:id="@+id/txt_prenom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbl_prenom"
        android:layout_margin="@dimen/marge_petite"
        android:ems="10"
        android:hint="@string/txt_prenom_infos"
        android:inputType="textPersonName"
        android:textSize="@dimen/tailleTexte_petite" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_dateNaissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_prenom"
        android:layout_margin="@dimen/marge_grande"
        android:text="@string/lbl_dateNaiss"
        android:textSize="@dimen/tailleTexte_moyenne" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_dateNaissance"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false" />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/datePicker1"
        android:layout_margin="@dimen/marge_petite"
        android:text="@string/btn_text_valider"
        android:textSize="@dimen/tailleTexte_grande" />

</RelativeLayout>
